Fix coverage workflow

--- a/.github/workflows/third-party-tests.yml
+++ b/.github/workflows/third-party-tests.yml
@@ -57,8 +57,8 @@ jobs:
 
   llvm-coverage-upload:
     if: inputs.coverage-enabled
+    needs: third-party-tests
     runs-on: inputs.macos-platform
-    depends: third-party-tests
     steps:
       - name: 📥 Download Artifacts
         uses: actions/download-artifact@5.0.0
