Fix upload artifacts step

--- a/.github/workflows/apple-tests.yml
+++ b/.github/workflows/apple-tests.yml
@@ -51,5 +51,5 @@ jobs:
         with:
           name: coverage-${{ env.DEST_MD5 }}
           path: |
-            *.profdata
-            */*.xctest
+            .xcbuild/**/*.profdata
+            .xcbuild/**/*.xctest
