--- a/.github/workflows/third-party-tests.yml
+++ b/.github/workflows/third-party-tests.yml
@@ -3,6 +3,9 @@ name: Third Party Tests
 on:
   workflow_call:
     inputs:
+      name:
+        required: true
+        type: string
       swift-version:
         default: '6.1'
         required: false
@@ -17,6 +20,7 @@ on:
 
 jobs:
   third-party-tests:
+    name: "Testing on ${{ inputs.name }}"
     runs-on: ${{ inputs.platform }}
     steps:
       - name: ☑️ Swift Select
@@ -82,5 +86,5 @@ jobs:
         if: inputs.coverage-enabled
         uses: actions/upload-artifact@v4.6.2
         with:
-          name: coverage-${{ inputs.platform }}
+          name: ${{ inputs.name }}
           path: coverage-artifacts/
